add host properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/books
+# spring.datasource.url=jdbc:mysql://localhost:3306/books
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=update
+# server.port=8082
+
+
+spring.datasource.url=jdbc:mysql://containers-us-west-80.railway.app:7209/railway
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.generate-ddl=true
+spring.datasource.password=LP7FQVwt08NpQYIPnZf4
 spring.jpa.hibernate.ddl-auto=update
-server.port=8082
